Updated language file

--- a/languages/atum-stock-manager-for-woocommerce.pot
+++ b/languages/atum-stock-manager-for-woocommerce.pot
@@ -2,10 +2,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ATUM Stock Manager for WooCommerce\n"
-"POT-Creation-Date: 2023-04-20 10:47+0200\n"
+"POT-Creation-Date: 2023-04-20 13:43+0200\n"
 "PO-Revision-Date: 2017-01-15 12:21+0100\n"
 "Last-Translator: Salva Machí <salvamb@sispixels.com>\n"
-"Language-Team: Be Rebel <web@stockmanagementlabs.com>\n"
+"Language-Team: BE REBEL <https://berebel.studio>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,6 +19,8 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
+"X-Poedit-SearchPathExcluded-1: node_modules\n"
+"X-Poedit-SearchPathExcluded-2: vendor\n"
 
 #: atum-stock-manager-for-woocommerce.php:84
 #, php-format
